refactor: merged all stores in to orchestrator
